# libmsspeech

./: AUTHORS  LICENSE  Makefile.am  README.md  configure.ac
exampleProgram/: Makefile.am  exampleProgram.c
include/: Makefile.am  ms_speech.h  ms_speech_logging.h  response_messages.h
include/ms_speech/: ms_speech.h  ms_speech_logging.h  response_messages.h
libmsspeech/: Makefile.am  client_messages.c  client_messages.h  compat.c  compat.h  message_constants.c  message_constants.h  ms_speech.c  ms_speech_guid.c  ms_speech_guid.h  ms_speech_logging.c  ms_speech_logging_priv.h  ms_speech_priv.h  ms_speech_status_control.c  ms_speech_status_control.h  ms_speech_telemetry.c  ms_speech_telemetry.h  ms_speech_timestamp.c  ms_speech_timestamp.h  response_messages.c  response_messages_priv.h
